# operations-debs-contenttranslation-apertium-mlt-ara

./: .gitignore  ACKNOWLEDGEMENTS  AUTHORS  Makefile.am  README  apertium-mlt-ara.ara-mlt.t1x  apertium-mlt-ara.mlt-ara.dix  apertium-mlt-ara.mlt-ara.rlx  apertium-mlt-ara.mlt-ara.t1x  apertium-mlt-ara.mlt-ara.t2x  apertium-mlt-ara.mlt-ara.t3x  apertium-mlt-ara.mlt.acx  apertium-mlt-ara.mlt.tsx  apertium-mlt-ara.post-mlt.dix  apertium-mlt-ara.translit.dix  apertium-mlt-ara_0.1.0~r57554.orig.tar.gz.delta  apertium-mlt-ara_0.1.0~r57554.orig.tar.gz.id  apertium-mlt-ara_0.2.0~r62623.orig.tar.bz2.delta  apertium-mlt-ara_0.2.0~r62623.orig.tar.bz2.id  configure.ac  lexchoicebil.xsl  mlt-ara-unsupervised.make  mlt-ara.prob  modes.xml  pending-tests.sh  regression-tests.sh  wiki-tests.sh
debian/: changelog  control  copyright
dev/: brokenpluraladj.txt  brokenplurals.txt  inconsistency-summary.sh  inconsistency.sh  testvoc-summary.ar-mt.txt  testvoc-summary.mt-ar.txt  testvoc.sh  trimmed-coverage.sh  waw-ambig.sh
dev/ar_verbs/: stems.wiki  verb.py
dev/ar_verbs/classes/: __init__.py  defective.py  doubled.py  firsthamza.py  firstw.py  hollow.py  irregular.py  quad.py  secondhamza.py  sound.py  thirdhamza.py
dev/mt_verbs/: stems-irregular.wiki  stems-loan.wiki  stems-semitic.wiki  verb.py
dev/mt_verbs/classes/: __init__.py  defective.py  doubled.py  hollow.py  irregular.py  loan.py  quad.py  strong.py  weak.py
dev/story/: story.ar.txt  story.gt.posted.txt  story.gt.txt  story.mt.txt  story.mtar.posted.txt  story.mtar.txt  story2.gt.posted.txt  story2.gt.txt  story2.mt.txt  story2.mtar.posted.txt  story2.mtar.txt  story3.gt.posted.txt  story3.gt.txt  story3.mt.txt  story3.mtar.posted.txt  story3.mtar.txt  story4.gt.posted.txt  story4.gt.txt  story4.mt.txt  story4.mtar.posted.txt  story4.mtar.txt  story5.gt.posted.txt  story5.gt.txt  story5.mt.txt  story5.mtar.posted.txt  story5.mtar.txt
